iptables_haproxy_template
*mangle
:PREROUTING ACCEPT [4548:215996]
:INPUT ACCEPT [6933:1475969]
:FORWARD ACCEPT [134:7112]
:OUTPUT ACCEPT [11164:1706442]
:POSTROUTING ACCEPT [11167:1706622]
:DIVERT - [0:0]
-A PREROUTING -p tcp -m socket -j DIVERT
-A DIVERT -j MARK --set-xmark 0x6f/0xffffffff
-A DIVERT -j ACCEPT
COMMIT
# Completed on Tue Oct 15 16:48:13 2019
# Generated by iptables-save v1.4.21 on Tue Oct 15 16:48:13 2019
*nat
:PREROUTING ACCEPT [316:31592]
:INPUT ACCEPT [12:720]
:OUTPUT ACCEPT [5538:332493]
:POSTROUTING ACCEPT [5538:332493]
-A POSTROUTING -s 192.168.1.0/24 -o ens3 -j SNAT --to-source 10.0.0.50
COMMIT
# Completed on Tue Oct 15 16:48:13 2019
# Generated by iptables-save v1.4.21 on Tue Oct 15 16:48:13 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [13253:1847858]
:RH-Firewall-1-INPUT - [0:0]
:SSH-ALLOW - [0:0]
:SSH-FLOOD - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -d 10.0.0.0/24 -j ACCEPT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -s 192.168.1.48/32 -d 224.0.0.0/8 -j ACCEPT
-A RH-Firewall-1-INPUT -s 192.168.1.49/32 -d 224.0.0.0/8 -j ACCEPT
-A RH-Firewall-1-INPUT -s 10.1.1.48/32 -d 224.0.0.0/8 -j ACCEPT
-A RH-Firewall-1-INPUT -s 10.1.1.49/32 -d 224.0.0.0/8 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 465 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 143 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 110 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 995 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 5222 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 5223 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 5229 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 44310 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 44311 -j ACCEPT
-A RH-Firewall-1-INPUT -d 10.0.0.48/32 -p tcp -m tcp --dport 22 -m state --state NEW -j SSH-FLOOD
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A RH-Firewall-1-INPUT -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited
-A SSH-ALLOW -p tcp -m tcp --dport 22 -j ACCEPT
-A SSH-FLOOD -m limit --limit 2/min --limit-burst 2 -j SSH-ALLOW
-A SSH-FLOOD -j DROP
COMMIT
