iptables_keepalived_template
### iptables cfg example for keepalived    loadbalancer ###
###
# loadbalancer 1, external interface IP 10.0.0.48(ens224), internal interface IP 192.168.1.48(ens192)
# loadbalancer VIP floating between loadbalancer 1 and loadbalancer 2, external 10.0.0.50, internal 192.168.1.50
# ( 192.168.1.50 is default GW for backend IceWarp servers )
# IceWarp backend servers have internal IPs 192.168.1.11 and 192.168.1.12, network 192.168.1.0/24
###
###
*nat
:PREROUTING ACCEPT [597335:34385130]
:INPUT ACCEPT [8749:1142835]
:OUTPUT ACCEPT [241224:14475405]
:POSTROUTING ACCEPT [25:1718]
# incoming packets to public interface will be marked fith fwmarks for keepalived services ( svc port number in HEX )
-A PREROUTING -d 10.0.0.50/32 -p tcp -m tcp --dport 80 -j MARK --set-xmark 0x1bb/0xffffffff
-A PREROUTING -d 10.0.0.50/32 -p tcp -m tcp --dport 443 -j MARK --set-xmark 0x1bb/0xffffffff
-A PREROUTING -d 10.0.0.50/32 -p tcp -m tcp --dport 5222 -j MARK --set-xmark 0x1466/0xffffffff
-A PREROUTING -d 10.0.0.50/32 -p tcp -m tcp --dport 5223 -j MARK --set-xmark 0x1467/0xffffffff
-A PREROUTING -d 10.0.0.50/32 -p tcp -m tcp --dport 25 -j MARK --set-xmark 0x19/0xffffffff
-A PREROUTING -d 10.0.0.50/32 -p tcp -m tcp --dport 587 -j MARK --set-xmark 0x24b/0xffffffff
-A PREROUTING -d 10.0.0.50/32 -p tcp -m tcp --dport 465 -j MARK --set-xmark 0x1d1/0xffffffff
-A PREROUTING -d 10.0.0.50/32 -p tcp -m tcp --dport 143 -j MARK --set-xmark 0x8f/0xffffffff
-A PREROUTING -d 10.0.0.50/32 -p tcp -m tcp --dport 993 -j MARK --set-xmark 0x3e1/0xffffffff
# NAT for balancing:
-A POSTROUTING -s 192.168.1.0/24 -o ens224 -j SNAT --to-source 10.0.0.50
-A POSTROUTING -s 192.168.1.0/24 -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [1991849:188945738]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2407055:143716571]
# keepalived VRRP:
-A INPUT -s 10.0.0.48/32 -d 224.0.0.0/8 -j ACCEPT
-A INPUT -s 10.0.0.49/32 -d 224.0.0.0/8 -j ACCEPT
-A INPUT -s 192.168.1.48/32 -d 224.0.0.0/8 -j ACCEPT
-A INPUT -s 192.168.1.49/32 -d 224.0.0.0/8 -j ACCEPT
# incoming balanced services:
-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 465 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 143 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5222 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5223 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A FORWARD -i ens224 -j ACCEPT
-A FORWARD -i ens192 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
*mangle
:PREROUTING ACCEPT [3094662:319087579]
:INPUT ACCEPT [1991877:188947333]
:FORWARD ACCEPT [516375:97305280]
:OUTPUT ACCEPT [2407488:143759290]
:POSTROUTING ACCEPT [2923430:241021851]
COMMIT
